tlc website first deployment

--- a/mContact.html
+++ b/mContact.html
@@ -33,8 +33,6 @@
         }
     </script>
 
-
-
     <style>
         .tle {
             font-family: 'Josefin Sans', cursive;
@@ -61,16 +59,6 @@
         }
 
         @media screen and (min-width: 720px) {
-            .containr {
-                position: relative;
-                width: 75%;
-                height: 0;
-                padding-bottom: 56.25%;
-            }
-
-            .hdspace {
-                padding-top: 25px;
-            }
 
             .vrse {
                 font-family: 'Courgette', cursive;
@@ -78,85 +66,32 @@
             }
         }
 
-        // Small devices (landscape phones, 576px and up)
+         /* Small devices (landscape phones, 576px and up) */
         @media (min-width: 576px) {
-            .containr {
-                position: relative;
-                width: 100%;
-                height: 0;
-                padding-bottom: 56.25%;
-            }
-
-            .hdspace {
-                padding-top: 5px;
-            }
-
             .vrse {
                 font-family: 'Courgette', cursive;
                 font-size: 14px;
             }
         }
 
-        // Medium devices (tablets, 768px and up)
+         /* Medium devices (tablets, 768px and up) */
         @media (min-width: 768px) {
-            .containr {
-                position: relative;
-                width: 100%;
-                height: 0;
-                padding-bottom: 28.25%;
-            }
-
-            .hdspace1 {
-                padding-top: 30px !important;
-            }
-
             .vrse {
                 font-family: 'Courgette', cursive;
                 font-size: 18px;
             }
-
         }
 
-        // Large devices (desktops, 992px and up)
+         /* Large devices (desktops, 992px and up) */
         @media (min-width: 992px) {
-            .containr {
-                position: relative;
-                width: 100%;
-                height: 0;
-                padding-bottom: 28.25%;
-            }
-
-            .hdspace1 {
-                padding-top: 30px;
-                font-family: 'Courgette', cursive;
-                font-size: 20px;
-            }
-
-            .hdspace2 {
-                padding-top: 25px;
-            }
-
             .vrse {
                 font-family: 'Courgette', cursive;
                 font-size: 24px;
             }
         }
 
-        // Extra large devices (large desktops, 1200px and up)
+         /* Extra large devices (large desktops, 1200px and up) */
         @media (min-width: 1200px) {
-            .containr {
-                position: relative;
-                width: 100%;
-                height: 0;
-                padding-bottom: 28.25%;
-            }
-
-            .hdspace1 {
-                padding-top: 30px;
-                font-family: 'Courgette', cursive;
-                font-size: 20px;
-            }
-
             .vrse {
                 font-family: 'Courgette', cursive;
                 font-size: 24px;
@@ -173,37 +108,18 @@
 </head>
 
 <body>
-
-
     <main>
-        <div class="container-fluid mt-4" >
-  
-
+        <div class="container-fluid mt-4">
             <div class="row no-gutters justify-content-center">
-
-           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-4 pb-3 embed-responsive" style="height: 24rem;">
-        <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3805.5021232707118!2d78.3932487149902!3d17.48352810462679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb918fd440d845%3A0xaba048f1666f37c7!2sTrinity%20Lutheran%20Church!5e0!3m2!1sen!2sin!4v1641999037083!5m2!1sen!2sin" 
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</div>
-
-            </div>
-        </div>
-    </main>
-    <footer>
-        <div class="container-fluid">
-            <div class="row no-gutters justify-content-right">
-
-                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-
-                    <script src="https://apis.google.com/js/platform.js"></script>
-
-                    <div class="g-ytsubscribe" data-channelid="UCxDGxMGs7owGMgnBsRhoaBg" data-layout="full"
-                        data-count="default"> </div>
-                    <p>Subscribe our Channel for Updates</p>
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 mb-4 pb-3 embed-responsive" style="height: 24rem;">
+                <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3805.5021232707118!2d78.3932487149902!3d17.48352810462679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb918fd440d845%3A0xaba048f1666f37c7!2sTrinity%20Lutheran%20Church!5e0!3m2!1sen!2sin!4v1641999037083!5m2!1sen!2sin" 
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
-    </footer>
+    </main>
+
+
     <!-- End mainmenu area -->
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/8.9.0/firebase-app.js"></script>
