--- a/keertanlu.html
+++ b/keertanlu.html
@@ -199,9 +199,8 @@
 
             <div class="row no-gutters justify-content-center">
 
-            
                 <div class="col-md-8 pt-3 ps-1 pe-1 text-center text-justify">
-                    <embed src="aelc_keertanulu.pdf" type="application/pdf" width="100%" height="600px" />
+                    <embed src="aelc_keertanulu.pdf#toolbar=0&navpanes=0" type="application/pdf" width="100%" height="600px" />
                 </div>
 
             </div>
