--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
            
 
             <h5 class="text-danger text-center pt-2" style="line-height: 2rem;">
-                త్రిత్వము తర్వాతి  2వ ఆదివారం <br>
-                    18th జూన్, 2023<br>
+                త్రిత్వము తర్వాతి  3వ ఆదివారం <br>
+                    26th జూన్, 2023<br>
                     ఆరాధన ఉ: 9:30 గం: ప్రారంభమగును
                </h5>
                 </div>
@@ -207,10 +207,9 @@
                  <img src="img/TLC1.png" class="img-fluid mx-auto d-block" style="cursor:pointer;"
                         onclick="myFunction()" />
    
-   <!-- <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
+   <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
     src="https://www.youtube.com/embed/live_stream?channel=UCxDGxMGs7owGMgnBsRhoaBg" frameborder="0" allowfullscreen></iframe> 
-      -->
-    <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/quNQPrrrc6A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      
 </div>
 
 
@@ -224,8 +223,8 @@
                         style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
 
                         <h6 class="text-center text-danger tle pt-2">
-                            <b>2nd Sunday after Trinity
-                                <br>18th Jun, 2023
+                            <b>3rd Sunday after Trinity
+                                <br>25th Jun, 2023
                                 </b> <br>
                              Worship starts at 9:30 a.m. 
                         </h6>
