Updated live html

--- a/live.html
+++ b/live.html
@@ -204,8 +204,8 @@
                 <img src="img/xmas.png" height="100" /> -->
                 
                 <h6 class="text-danger text-center pt-2">
-                    త్రిత్వము -  2వ ఆదివారం<br>
-                    18th జూన్, 2023<br>
+                    త్రిత్వము -  3వ ఆదివారం<br>
+                    25th జూన్, 2023<br>
                     ఆరాధన ఉ: 9:30 గం: ప్రారంభమగును
                 </h6>
             </div>
@@ -237,8 +237,8 @@
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
 
                     <h5 class="text-center text-danger tle pt-2">
-                        <b> 2nd Sunday - Trinity   
-                            <br>18th Jun, 2023
+                        <b> 3rd Sunday - Trinity   
+                            <br>26th Jun, 2023
                             </b> <br>
                   Worship starts at 9:30 a.m. 
                     </h5>
