--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
            
 
             <h5 class="text-danger text-center pt-2" style="line-height: 2rem;">
-                త్రిత్వము తర్వాతి  3వ ఆదివారం <br>
-                    26th జూన్, 2023<br>
+                త్రిత్వము తర్వాతి  4వ ఆదివారం <br>
+                    2nd జులై, 2023<br>
                     ఆరాధన ఉ: 9:30 గం: ప్రారంభమగును
                </h5>
                 </div>
@@ -224,8 +224,8 @@
                         style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
 
                         <h6 class="text-center text-danger tle pt-2">
-                            <b>3rd Sunday after Trinity
-                                <br>25th Jun, 2023
+                            <b>4th Sunday after Trinity
+                                <br>2nd July, 2023
                                 </b> <br>
                              Worship starts at 9:30 a.m. 
                         </h6>
