--- a/previous.html
+++ b/previous.html
@@ -198,8 +198,8 @@
                 <img src="img/xmas.png" height="100" /> -->
                 
                 <h6 class="text-danger text-center pt-2">
-                    త్రిత్వము తర్వాతి  3వ ఆదివారం:<br>
-                    26th జూన్ ,2023<br>
+                    త్రిత్వము తర్వాతి  4వ ఆదివారం:<br>
+                    2nd జులై ,2023<br>
                     ఆరాధన ఉ: 9:30 గం: ప్రారంభమగును
                 </h6>
             </div>
@@ -207,7 +207,7 @@
 
                 <img src="img/TLC1.png" class="pt-2 img-fluid mx-auto d-block" style="cursor:pointer;"
                     onclick="myFunction()" />
-                    <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/9l-fHxyS3TY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/kGJIfArMg8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pt-3">
@@ -218,8 +218,8 @@
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
 
                     <h6 class="text-center text-danger tle pt-2">
-                        <b> 3rd Sunday after Trinity   
-                            <br>26th Jun, 2023
+                        <b> 4th Sunday after Trinity   
+                            <br>2nd July, 2023
                             </b> <br>
                   Worship starts at 9:30 a.m. 
                     </h6>
