9th Jyly Update

--- a/live.html
+++ b/live.html
@@ -204,9 +204,9 @@
                 <img src="img/xmas.png" height="100" /> -->
                 
                 <h6 class="text-danger text-center pt-2">
-                    త్రిత్వము -  4వ ఆదివారం<br>
-                    2nd జులై, 2023<br>
-                    ఆరాధన ఉ: 9:30 గం: ప్రారంభమగును
+                    త్రిత్వము -  5వ ఆదివారం<br>
+                    9th జులై, 2023<br>
+                    ఆరాధన ఉ: 10:0 గం: ప్రారంభమగును
                 </h6>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pb-3 pt-2 embed-responsive text-center">
@@ -237,10 +237,10 @@
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
 
                     <h5 class="text-center text-danger tle pt-2">
-                        <b> 4th Sunday - Trinity   
-                            <br>2nd July, 2023
+                        <b> 5th Sunday - Trinity   
+                            <br>9th July, 2023
                             </b> <br>
-                  Worship starts at 9:30 a.m. 
+                  Worship starts at 10:00 a.m. 
                     </h5>
             </div>
      
