9th July 2nd commit

--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
                  <img src="img/TLC1.png" class="img-fluid mx-auto d-block" style="cursor:pointer;"
                         onclick="myFunction()" />
    
-    <!-- <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
+   <!-- <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
     src="https://www.youtube.com/embed/live_stream?channel=UCxDGxMGs7owGMgnBsRhoaBg" frameborder="0" allowfullscreen></iframe> 
-        -->
-        <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/kGJIfArMg8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+       -->
+       <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/9l-fHxyS3TY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 
@@ -224,8 +224,8 @@
                         style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
 
                         <h6 class="text-center text-danger tle pt-2">
-                            <b>3rd Sunday after Trinity
-                                <br>25th Jun, 2023
+                            <b>5th Sunday after Trinity
+                                <br>9th July, 2023
                                 </b> <br>
                              Worship starts at 10:00 a.m. 
                         </h6>
