--- a/previous.html
+++ b/previous.html
@@ -207,8 +207,7 @@
 
                 <img src="img/TLC1.png" class="pt-2 img-fluid mx-auto d-block" style="cursor:pointer;"
                     onclick="myFunction()" />
-                    <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/kGJIfArMg8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+                    id="tlcvideo" style="display:none" class="embed-responsive-item"
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pt-3">
                 <!-- <img src="img/star2.png" height="100" />
