--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
             <div id="stars-group-1"></div>
             <div  class="col pt-3">
                 <a>
-                    <img class="img-fluid"
-                        src="https://firebasestorage.googleapis.com/v0/b/tlckphb-3a916.appspot.com/o/aelc.jpeg?alt=media&token=0f218da9-227e-4bf2-80f2-ea8d0550f954" />
-
+                    <img class="img-fluid w-100"
+                        src="https://firebasestorage.googleapis.com/v0/b/tlckphb-3a916.appspot.com/o/25.jpg?alt=media&token=f73fefa9-f822-43c9-a8d6-9534da28edaa"/>
                     </a>
             </div>
             <div class="col p-0 my-auto">
@@ -182,8 +181,8 @@
            
 
             <h5 class="text-danger text-center pt-2" style="line-height: 2rem;">
-                త్రిత్వము తర్వాతి  5వ ఆదివారం <br>
-                    9th జులై, 2023<br>
+                త్రిత్వము తర్వాతి  6వ ఆదివారం <br>
+                    16th జులై, 2023<br>
                     ఆరాధన ఉ: 10:00 గం: ప్రారంభమగును
                </h5>
                 </div>
@@ -207,11 +206,10 @@
                  <img src="img/TLC1.png" class="img-fluid mx-auto d-block" style="cursor:pointer;"
                         onclick="myFunction()" />
    
-   <!-- <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
+    <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
     src="https://www.youtube.com/embed/live_stream?channel=UCxDGxMGs7owGMgnBsRhoaBg" frameborder="0" allowfullscreen></iframe> 
-       -->
+       
 
-       <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLM5j3mM366tG48HaV2YnWakJJ2ZTxLn2w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 
@@ -225,8 +223,8 @@
                         style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
 
                         <h6 class="text-center text-danger tle pt-2">
-                            <b>5th Sunday after Trinity
-                                <br>9th July, 2023
+                            <b>6th Sunday after Trinity
+                                <br>16th July, 2023
                                 </b> <br>
                              Worship starts at 10:00 a.m. 
                         </h6>
