16th july update

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <!-- <img src="img/star2.png" height="100" />
             <img src="img/xmas.png" height="100" /> -->
            
-
+            <h4 class="text-danger text-center pt-2">రజతోత్సవం</h4>
             <h5 class="text-danger text-center pt-2" style="line-height: 2rem;">
                 త్రిత్వము తర్వాతి  6వ ఆదివారం <br>
                     16th జులై, 2023<br>
@@ -221,6 +221,7 @@
          
                     <button class="btn btn-info" onclick="window.location.reload();"
                         style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
+                        <h4 class="text-center text-danger pt-2">Silver Jubilee</h4>
 
                         <h6 class="text-center text-danger tle pt-2">
                             <b>6th Sunday after Trinity
