--- a/live.html
+++ b/live.html
@@ -202,12 +202,12 @@
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pt-3">
                 <!-- <img src="img/star2.png" height="100" />
                 <img src="img/xmas.png" height="100" /> -->
-                
-                <h6 class="text-danger text-center pt-2">
+                <h4 class="text-danger text-center pt-2">రజతోత్సవం</h4>
+                <h5 class="text-danger text-center pt-2">
                     త్రిత్వము -  6వ ఆదివారం<br>
                     16th జులై, 2023<br>
                     ఆరాధన ఉ: 10:0 గం: ప్రారంభమగును
-                </h6>
+                </h5>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pb-3 pt-2 embed-responsive text-center">
                 <!-- <a href="https://play.google.com/store/apps/details?id=com.cyberniks.tlckphb" 
@@ -235,11 +235,11 @@
                 
                 <button class="btn btn-info" onclick="window.location.reload();"
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
-
+                    <h4 class="text-center text-danger pt-2">Silver Jubilee</h4>
                     <h5 class="text-center text-danger tle pt-2">
                         <b> 6th Sunday - Trinity   
                             <br>16th July, 2023
-                            </b> <br>
+                        </b> <br>
                   Worship starts at 10:00 a.m. 
                     </h5>
             </div>
