--- a/live.html
+++ b/live.html
@@ -202,10 +202,9 @@
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pt-3">
                 <!-- <img src="img/star2.png" height="100" />
                 <img src="img/xmas.png" height="100" /> -->
-                <h4 class="text-danger text-center pt-2">రజతోత్సవం</h4>
                 <h5 class="text-danger text-center pt-2">
-                    త్రిత్వము -  6వ ఆదివారం<br>
-                    16th జులై, 2023<br>
+                    త్రిత్వము -  7వ ఆదివారం<br>
+                    23rd జులై, 2023<br>
                     ఆరాధన ఉ: 10:0 గం: ప్రారంభమగును
                 </h5>
             </div>
@@ -235,10 +234,9 @@
                 
                 <button class="btn btn-info" onclick="window.location.reload();"
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
-                    <h4 class="text-center text-danger pt-2">Silver Jubilee</h4>
                     <h5 class="text-center text-danger tle pt-2">
-                        <b> 6th Sunday - Trinity   
-                            <br>16th July, 2023
+                        <b> 7th Sunday - Trinity   
+                            <br>23rd July, 2023
                         </b> <br>
                   Worship starts at 10:00 a.m. 
                     </h5>
