--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                     <!-- <img src="img/star2.png" height="100" />
             <img src="img/xmas.png" height="100" /> -->
                     <h5 class="text-danger text-center pt-2" style="line-height: 2rem;">
-                        త్రిత్వము తర్వాతి 7వ ఆదివారం <br>
-                        23rd జులై, 2023<br>
+                        త్రిత్వము తర్వాతి 8వ ఆదివారం <br>
+                        30th జులై, 2023<br>
                         ఆరాధన ఉ: 10:00 గం: ప్రారంభమగును
                     </h5>
                 </div>
@@ -200,11 +200,10 @@
                     <img src="img/TLC1.png" class="img-fluid mx-auto d-block" style="cursor:pointer;"
                         onclick="myFunction()" />
 
-                    <!-- <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
+                    <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
     src="https://www.youtube.com/embed/live_stream?channel=UCxDGxMGs7owGMgnBsRhoaBg" frameborder="0" allowfullscreen></iframe> 
-                        -->
+                       
 
-                        <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/122Vy2I2F0s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
 
 
@@ -217,8 +216,8 @@
                     <button class="btn btn-info" onclick="window.location.reload();"
                         style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
                     <h6 class="text-center text-danger tle pt-2">
-                        <b>7th Sunday after Trinity
-                            <br>23rd July, 2023
+                        <b>8th Sunday after Trinity
+                            <br>30th July, 2023
                         </b> <br>
                         Worship starts at 10:00 a.m.
                     </h6>
