--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                     <!-- <img src="img/star2.png" height="100" />
             <img src="img/xmas.png" height="100" /> -->
                     <h5 class="text-danger text-center pt-2" style="line-height: 2rem;">
-                        త్రిత్వము తర్వాతి 8వ ఆదివారం <br>
-                        30th జులై, 2023<br>
+                        త్రిత్వము తర్వాతి 9వ ఆదివారం <br>
+                        6th ఆగష్టు,2023<br>
                         ఆరాధన ఉ: 10:00 గం: ప్రారంభమగును
                     </h5>
                 </div>
@@ -217,8 +217,8 @@
                     <button class="btn btn-info" onclick="window.location.reload();"
                         style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
                     <h6 class="text-center text-danger tle pt-2">
-                        <b>8th Sunday after Trinity
-                            <br>30th July, 2023
+                        <b>9th Sunday after Trinity
+                            <br>6th Aug, 2023
                         </b> <br>
                         Worship starts at 10:00 a.m.
                     </h6>
