--- a/previous.html
+++ b/previous.html
@@ -200,14 +200,14 @@
                 <h6 class="text-danger text-center pt-2">
                     త్రిత్వము తర్వాతి  8వ ఆదివారం:<br>
                     30th జులై ,2023<br>
-                    ఆరాధన ఉ: 9:30 గం: ప్రారంభమగును
+                    ఆరాధన ఉ: 10:00 గం: ప్రారంభమగును
                 </h6>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pb-3 pt-2 embed-responsive text-center">
 
                 <img src="img/TLC1.png" class="pt-2 img-fluid mx-auto d-block" style="cursor:pointer;"
                     onclick="myFunction()" />
-                    <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/irgCcYF419A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/CsKr6NE3urM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                 </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pt-3">
@@ -218,10 +218,10 @@
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
 
                     <h6 class="text-center text-danger tle pt-2">
-                        <b> 8th Sunday after Trinity   
-                            <br>30th July, 2023
+                        <b> 9th Sunday after Trinity   
+                            <br>6th Aug, 2023
                             </b> <br>
-                  Worship starts at 9:30 a.m. 
+                  Worship starts at 10:00 a.m. 
                     </h6>
             </div>
         </div>
