27th August live url

--- a/index.html
+++ b/index.html
@@ -200,10 +200,9 @@
                     <img src="img/TLC1.png" class="img-fluid mx-auto d-block" style="cursor:pointer;"
                         onclick="myFunction()" />
 
-                   <!-- <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
+                    <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
     src="https://www.youtube.com/embed/live_stream?channel=UCxDGxMGs7owGMgnBsRhoaBg" frameborder="0" allowfullscreen></iframe> 
-                 -->
-                 <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/fU_DpXxjRPY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                
                 </div>
 
 
