3rd Sept Final Update

--- a/live.html
+++ b/live.html
@@ -203,8 +203,8 @@
                 <!-- <img src="img/star2.png" height="100" />
                 <img src="img/xmas.png" height="100" /> -->
                 <h5 class="text-danger text-center pt-2">
-                    త్రిత్వము -  13వ ఆదివారం<br>
-                    3rd సెప్టెంబర్, 2023<br>
+                    త్రిత్వము -  14వ ఆదివారం<br>
+                    10th సెప్టెంబర్, 2023<br>
                     ఆరాధన ఉ: 10:00 గం: ప్రారంభమగును
                 </h5>
             </div>
@@ -235,8 +235,8 @@
                 <button class="btn btn-info" onclick="window.location.reload();"
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
                     <h5 class="text-center text-danger tle pt-2">
-                        <b> 13th Sunday - Trinity   
-                            <br>3rd September, 2023
+                        <b> 14th Sunday - Trinity   
+                            <br>10th September, 2023
                         </b> <br>
                   Worship starts at 10:00 a.m. 
                     </h5>
