--- a/previous.html
+++ b/previous.html
@@ -198,8 +198,8 @@
                 <img src="img/xmas.png" height="100" /> -->
                 
                 <h6 class="text-danger text-center pt-2">
-                    త్రిత్వము తర్వాతి  13వ ఆదివారం:<br>
-                    3rd సెప్టెంబర్ ,2023<br>
+                    త్రిత్వము తర్వాతి  14వ ఆదివారం:<br>
+                    10th సెప్టెంబర్ ,2023<br>
                     ఆరాధన ఉ: 10:00 గం: ప్రారంభమగును
                 </h6>
             </div>
@@ -208,7 +208,7 @@
                 <img src="img/TLC1.png" class="pt-2 img-fluid mx-auto d-block" style="cursor:pointer;"
                     onclick="myFunction()" />
 
-                    <iframe id="tlcvideo" style="display:none" class="embed-responsive-item"  width="560" height="315" src="https://www.youtube.com/embed/TQrWT_-p-tA?si=jTIWZcfvpw0YVgBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe  id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/AI89U4AsfMQ?si=4UcbeAkzKAtrC1KT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                 </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pt-3">
@@ -219,8 +219,8 @@
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
 
                     <h6 class="text-center text-danger tle pt-2">
-                        <b> 13th Sunday after Trinity   
-                            <br>3rd Sept, 2023
+                        <b> 14th Sunday after Trinity   
+                            <br>10th Sept, 2023
                             </b> <br>
                   Worship starts at 10:00 a.m. 
                     </h6>
