--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                     <!-- <img src="img/star2.png" height="100" />
             <img src="img/xmas.png" height="100" /> -->
                     <h5 class="text-danger text-center pt-2" style="line-height: 2rem;">
-                        త్రిత్వము తర్వాతి 16వ ఆదివారం <br>
-                        24th సెప్టెంబర్,2023<br>
+                        త్రిత్వము తర్వాతి 17వ ఆదివారం <br>
+                        1st అక్టోబర్,2023<br>
                         ఆరాధన ఉ: 10:00 గం: ప్రారంభమగును
                     </h5>
                 </div>
@@ -216,8 +216,8 @@
                     <button class="btn btn-info" onclick="window.location.reload();"
                         style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
                     <h6 class="text-center text-danger tle pt-2">
-                        <b>16th Sunday after Trinity
-                            <br>24th Sept., 2023
+                        <b>17th Sunday after Trinity
+                            <br>1st Oct., 2023
                         </b> <br>
                         Worship starts at 10:00 a.m.
                     </h6>
