--- a/tlc.html
+++ b/tlc.html
@@ -182,8 +182,8 @@
             <div class="row no-gutters justify-content-center">
                 <div class="col-md-8 pt-2 ps-1 pe-1 text-justify">
                     <h6 style="line-height: 2rem;">దేవుని ప్రియులైన మీకు శుభ వందనములు!<br> 
-                        నేడు గృహములందు త్రిత్వము తర్వాతి 17వ ఆదివారం,
-                        1st అక్టోబర్, ,2023, ఆరాధనలో పాల్గొనువారు ఆరాధన ఉ: 10:00 గం|| లకు 
+                        నేడు గృహములందు త్రిత్వము తర్వాతి 18వ ఆదివారం,
+                        8th అక్టోబర్, ,2023, ఆరాధనలో పాల్గొనువారు ఆరాధన ఉ: 10:00 గం|| లకు 
                           పాల్గొనగలరు.                      
                         దేవాలయములో ఆరాధనలో పాల్గొనువారు ప్రభుత్వము సూచించిన నిబంధనలు పాటించుచు ఆరాధనలో పాల్గొనవలసినదిగా ఆహ్వానించుచున్నాము.
                         
