--- a/live.html
+++ b/live.html
@@ -204,7 +204,7 @@
                 <img src="img/xmas.png" height="100" /> -->
                 <h5 class="text-danger text-center pt-2">
                     త్రిత్వము -  20వ ఆదివారం<br>
-                    21st అక్టోబర్, 2023<br>
+                    22nd అక్టోబర్, 2023<br>
                     ఆరాధన ఉ: 10:00 గం: ప్రారంభమగును
                 </h5>
             </div>
@@ -236,7 +236,7 @@
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
                     <h5 class="text-center text-danger tle pt-2">
                         <b> 20th Sunday - Trinity   
-                            <br>21st October, 2023
+                            <br>22nd October, 2023
                         </b> <br>
                   Worship starts at 10:00 a.m. 
                     </h5>
