--- a/index.html
+++ b/index.html
@@ -176,8 +176,9 @@
                     <!-- <img src="img/star2.png" height="100" />
             <img src="img/xmas.png" height="100" /> -->
                     <h5 class="text-danger text-center pt-2" style="line-height: 2rem;">
-                        త్రిత్వము తర్వాతి 22వ ఆదివారం <br>
-                        5th నవంబర్, 2023<br>
+                        కోత పండగ !
+                        త్రిత్వము తర్వాతి 23వ ఆదివారం <br>
+                        12th నవంబర్, 2023<br>
                         ఆరాధన ఉ: 10:00 గం: ప్రారంభమగును
                     </h5>
                 </div>
@@ -200,10 +201,9 @@
                     <img src="img/TLC1.png" class="img-fluid mx-auto d-block" style="cursor:pointer;"
                         onclick="myFunction()" />
 
-                         <!-- <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
+                      <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="460" height="215" 
     src="https://www.youtube.com/embed/live_stream?channel=UCxDGxMGs7owGMgnBsRhoaBg" frameborder="0" allowfullscreen></iframe> 
-      -->
-      <iframe id="tlcvideo" style="display:none" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/e84ibkU1aj8?si=SWjE7MB2EQ4SlCNT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+ 
 
                 </div> 
 
@@ -217,8 +217,9 @@
                     <button class="btn btn-info" onclick="window.location.reload();"
                         style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
                     <h6 class="text-center text-danger tle pt-2">
-                        <b>22nd Sunday after Trinity
-                            <br>5th Nov. 2023
+                        Harvest Festival !
+                        <b>23rd Sunday after Trinity
+                            <br>12th Nov. 2023
                         </b> <br>
                         Worship starts at 10:00 a.m.
                     </h6>
