--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <button class="btn btn-info" onclick="window.location.reload();"
                         style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
                     <h6 class="text-center text-danger tle pt-2">
-                        <b>1st Sunday - Advent
+                        <b>Advent - 1st Sunday 
                             <br>3rd Dec. 2023
                         </b> <br>
                         Worship starts at 10:00 a.m.
