10th Dec Update

--- a/live.html
+++ b/live.html
@@ -203,8 +203,8 @@
                 <!-- <img src="img/star2.png" height="100" />
                 <img src="img/xmas.png" height="100" /> -->
                 <h5 class="text-danger text-center pt-2">
-                    అడ్వెంట్ -  మొదటి ఆదివారం<br>
-                    3rd డిసెంబర్, 2023<br>
+                    అడ్వెంట్ -  3వ ఆదివారం<br>
+                    17th డిసెంబర్, 2023<br>
                     ఆరాధన ఉ: 10:00 గం: ప్రారంభమగును
                 </h5>
             </div>
@@ -235,8 +235,8 @@
                 <button class="btn btn-info" onclick="window.location.reload();"
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
                     <h5 class="text-center text-danger tle pt-2">
-                        <b> 1st Sunday - Advent   
-                            <br>3rd December, 2023
+                        <b> Advent - 3rd Sunday    
+                            <br>17th December, 2023
                         </b> <br>
                   Worship starts at 10:00 a.m. 
                     </h5>
