--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
             <div class="row no-gutters justify-content-center">
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pt-3">
                     <!-- <h6 class="text-primary text-center scrl">Upcoming Live Worship  27th March | 10:00 a.m.</h6> -->
-                    <!-- <img src="img/star2.png" height="100" />
-            <img src="img/xmas.png" height="100" /> -->
+                    <img src="img/star2.png" height="100" />
+            <img src="img/xmas.png" height="100" />
                     <h5 class="text-danger text-center pt-2" style="line-height: 2rem;">
                         అడ్వెంట్ -  3వ ఆదివారం<br>
                     17th డిసెంబర్, 2023<br>
@@ -208,9 +208,9 @@
 
 
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pt-3">
-                    <!-- <img src="img/star2.png" height="100" />
+                    <img src="img/star2.png" height="100" />
 
-                     <img  src="img/xmas.png" height="100" /> -->
+                     <img  src="img/xmas.png" height="100" />
 
 
                     <button class="btn btn-info" onclick="window.location.reload();"
