--- a/live.html
+++ b/live.html
@@ -46,6 +46,7 @@
 
 
     <style>
+        
         .tle {
             font-family: 'Josefin Sans', cursive;
             font-size: 22px;
@@ -200,8 +201,8 @@
 
         <div class="row no-gutters justify-content-center">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pt-3">
-                <!-- <img src="img/star2.png" height="100" />
-                <img src="img/xmas.png" height="100" /> -->
+                <img src="img/star2.png" height="100" />
+                <img src="img/xmas.png" height="100" />
                 <h5 class="text-danger text-center pt-2">
                     అడ్వెంట్ -  4వ ఆదివారం<br>
                     24th డిసెంబర్, 2023<br>
@@ -229,8 +230,8 @@
 
 </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 pt-3">
-                <!-- <img src="img/star2.png" height="100" />
-                <img src="img/xmas.png" height="100" /> -->
+                <img src="img/star2.png" height="100" />
+                <img src="img/xmas.png" height="100" />
                 
                 <button class="btn btn-info" onclick="window.location.reload();"
                     style="position: absolute; padding:2px; top: 0px; right: 0px;">Refresh</button>
